@@ -1,4 +1,5 @@
 emma (0.4) unstable; urgency=low
+  Sat, 12 Aug 2006 19:54:37 +0200
   * clear all sql_log/message entries via popup
   * extended blobview for editing of big values (save/load to/from) disk
   * per query-tab encoding support (all python supported encodings)
@@ -10,7 +11,11 @@ emma (0.4) unstable; urgency=low
   * each tab has its on selected database (show beneath the encoding)
   * automatic query reexecution (until error)
   * new feature: save result as sql script
- -- Florian Schmidt <schmidt_florian@gmx.de>  Sat, 12 Aug 2006 19:54:37 +0200
+  * new field_conditions operators: "isnull" and "not isnull"
+  * pass unescaped input to query if field_conditions value starts with "eval: " 
+  * fixed sql_log when > and < chars appear in query
+  * fixed sql_log to retain the complete sql query even if it doesn't display it
+ -- Florian Schmidt <schmidt_florian@gmx.de>  Sun, 13 Aug 2006 17:52:25 +0200
  
 emma (0.3) unstable; urgency=low
   Sun, 04 Jun 2006 17:47:06 +0200
